Using C# DTO instead of arguments list in generated PaymentsClient
